EXTRA_DIST = logoff.1 \
             startapp.1 \
             xrdp-chansrv.1 \
             xrdp-genkeymap.1 \
             xrdp-keygen.1 \
             xrdp-sesadmin.1 \
             xrdp-sessvc.1 \
             xrdp-sestest.1 \
             vchannel_rdpdr.1 \
             rdpdr_printer.1 \
             seamlessrdpshell.1 \
             XHook.1
